<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usuario"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_usuario"
        style="@style/estiloEditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass"
        android:layout_below="@+id/usuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        style="@style/estiloEditText" />

    <Button
        style="@style/estiloBoton"
        android:text="@string/btn_login"
        android:id="@+id/login"
        android:layout_below="@+id/pass" />

    <Button
        style="@style/estiloBoton"
        android:text="@string/btn_new_user"
        android:id="@+id/new_user"
        android:layout_below="@+id/login"
        />
</RelativeLayout>